[package]
name = "atsam4lc4c"
description = "Peripheral access API for Atmel ATSAM4LC4C microcontrollers"
version = "0.1.1"
authors = ["Joost Yervante Damad <joost@damad.be>"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "svd2rust"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustit-be/atsam4lc4c"
documentation = "https://docs.rs/atsam4lc4c"
categories = ["embedded", "hardware-support"]

[dependencies]
bare-metal = "0.2"
cortex-m = "0.5"
vcell = "0.1"

[dependencies.cortex-m-rt]
optional = true
version = "0.5"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]

[badges]
travis-ci = { repository = "rustit-be/atsam4lc4c" }
